Fix font fallbacks
Passing a list of local fonts in font-family caused them to break on WebKit/Safari.

--- a/src/styles/TheatrePlayer.module.scss
+++ b/src/styles/TheatrePlayer.module.scss
@@ -131,7 +131,7 @@
 				> .control {
 					display: flex;
 					flex-direction: row;
-					font-family: 'Montserrat Alternates';
+					font-family: $MonsterratAlternates;
 					justify-content: space-around;
 					align-items: center;
 					margin: 3px 0px;
