--- a/src/styles/fonts/MontserratAlternates.scss
+++ b/src/styles/fonts/MontserratAlternates.scss
@@ -1,7 +1,6 @@
 @font-face {
-	font-family: 'Montserrat Alternates';
+	font-family: 'Monsterrat Alternates';
 	font-style: normal;
 	font-weight: 400;
-	src: local('Arial'), local('sans-serif'),
-		url('../../assets/MontserratAlternates.woff2') format('woff2');
+	src: url('../../assets/MontserratAlternates.woff2') format('woff2');
 }
