--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -15,7 +15,7 @@ button {
 h1,
 h2,
 h3 {
-	font-family: 'Montserrat Alternates';
+	font-family: $MonsterratAlternates;
 }
 
 :focus-visible {
@@ -56,7 +56,7 @@ h3 {
 
 #root {
 	width: $fixed-width;
-	font-family: 'Lato';
+	font-family: $Lato;
 	font-weight: 400;
 	color: var(--text);
 	display: flex;
